# xfoil-research

./: README.md  bike.csv  convergence-test.py  convergence_test.py  convergence_test_naca4412.py  convergence_test_template.py  fit.py  generate.py  naca-generator.py  naca4412_airfoil_points.csv  naca4412_airfoil_points_tmp.csv  naca_generator.py
src/xfoil/: libxfoil.dylib  model.py
xfoil-python/: README.md  pyproject.toml  settings.py
xfoil-python/data/: naca0012.py
xfoil-python/src/xfoil/: __init__.py
xfoilpython/: .coverage  Makefile  main.py  settings.py
xfoilpython/data/: sd7062.csv
xfoilpython/src/xfoil/: test.py  xfoil.py
xfoilpython/tests/: test_xfoil.py
xfoilpython/utils/: xfoil_utils.py
