[tool.poetry]
name = "xfoil-python"
version = "0.1.0"
description = ""
authors = ["Tsmorz <tonysmoragiewicz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
matplotlib = "^3.9.1.post1"
scipy = "^1.14.0"
psutil = "^6.0.0"
loguru = "^0.7.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
docformatter = "^1.7.5"
ruff = "^0.6.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core", "scikit-build", "cmake"]

[tool.mypy]
files = ["tests", "utils"]
strict = "true"
